@@ -56,7 +56,8 @@ func (s *clientServer) connectPair(compressLevel int) (*mockConn, *client, error
 	}
 
 	lc, err := newLumberjackClient(transp, compressLevel,
-		defaultConfig.BulkMaxSize, 100*time.Millisecond)
+		defaultConfig.BulkMaxSize, 100*time.Millisecond,
+		"test")
 	if err != nil {
 		return nil, nil, err
 	}
